Update to imagej-common 2.0.2
And fix a type matching bug it exposed.

When computing preferred matches (perfect and casting-only), we want to
consider boxed classes only. Otherwise, an otherwise perfect match with
primitive arguments won't be selected.

--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,8 @@
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
+
+		<imagej-common.version>2.0.2</imagej-common.version>
 	</properties>
 
 	<repositories>
