--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>34.1.0</version>
+		<version>37.0.0</version>
 		<relativePath />
 	</parent>
 
@@ -200,11 +200,7 @@
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
-		<imglib2.version>6.1.0</imglib2.version>
-		<imglib2-roi.version>0.14.0</imglib2-roi.version>
-		<imglib2-algorithm.version>0.13.1</imglib2-algorithm.version>
-		<imglib2-cache.version>1.0.0-beta-17</imglib2-cache.version>
-		<imglib2-algorithm-realtransform.version>4.0.1</imglib2-algorithm-realtransform.version>
+		<scijava-common.version>2.98.0</scijava-common.version>
 	</properties>
 
 	<repositories>
