--- a/pom.xml
+++ b/pom.xml
@@ -260,8 +260,7 @@
 		<imglib2-realtransform.version>4.0.3</imglib2-realtransform.version>
 		<imglib2-roi.version>0.15.0</imglib2-roi.version>
 		<imglib2-algorithm.version>0.15.3</imglib2-algorithm.version>
-		<imagej-common.version>2.1.1-SNAPSHOT</imagej-common.version>
-		<enforcer.skip>true</enforcer.skip>
+		<imagej-common.version>2.1.1</imagej-common.version>
 	</properties>
 
 	<repositories>
